* Added description field in chirpy.ini, for use in feeds
* Made quote titles in feeds more meaningful
* Put page title in feed title instead of subtitle
* Improved feed modification detection
* Made templates use HTML::Template's caching feature, which is pretty fast
* Template parameters are now global, which means you can include parameters
  from outside a loop
* Optimized template parsing a little
* Moved administration-related subs to a separate class, speeding up non-admin
  pages somewhat
* Extended quick style linking method: <> is now omitted and link text can be
  changed by separating it from URL by whitespace, e.g.
    Surf to <http://chirpy.sourceforge.net/ The Chirpy! web site>!
* Simplified RSS feed: using HTML in <description> and removing
  <content:encoded> and <xhtml:body>, making feedvalidator.org like it more
* News body on start page is now divided into paragraphs; opening and closing
  tag are included, so update your templates
* More sensible defaults for captchas: simply webapp.enable_captchas=1 should
  now work in most cases
* Bugfix: live rating no longer throws a JavaScript error in IE
* Bugfix: quote rating up log entry now includes quote ID (#1493589)
* Just for fun, quote IDs can now be in binary and hex notation too, as per
  <http://quotes.burntelectrons.org/844>

 _____________________________________________________________________________
/                                                                             \
| Chirpy! v0.2                                                     2006.05.02 |
\_____________________________________________________________________________/

* Fixed SQL injection vulnerabilities
* Fixed logging of author when editing or removing news items (#1289047)
* Added on-the-fly gzip compression to Chirpy::UI::WebApp--webapp.enable_gzip=1
  in your configuration file enables it
* Added optional captcha image to Chirpy::UI::WebApp's quote submission page
* Added quote tagging