@@ -1,0 +1,11 @@
+	<div id="search-form">
+	<TMPL_VAR NAME="SEARCH_FORM_START">
+		<div id="query-container">
+			<label for="query-field"><TMPL_VAR NAME="SEARCH_QUERY_LABEL"></label>
+			<input name="query" value="<TMPL_VAR NAME="SEARCH_QUERY">" id="query-field" accesskey="s" />
+		</div>
+		<div id="submit-container">
+			<input type="submit" value="<TMPL_VAR NAME="SUBMIT_SEARCH_LABEL">" id="submit-button" />
+		</div>
+	<TMPL_VAR NAME="SEARCH_FORM_END">
+	</div>
